--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mapadofogo",
+  "name": "mapafogo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -28,16 +34,15 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@types/react-leaflet": "^2.8.2",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-router-hash-link": "^2.4.1",
+    "dot-env": "^0.0.1"
   }
 }
